# my-claw

./: .gitignore  README.md  install.sh  pyproject.toml
my_claw/: config.py
my_claw/buddy/poke_game/: lockfile.py
my_claw/sandbox/: __init__.py  config.py
src/core/: commands.py  coordinator.py  main.py  memory.py  skills.py  skills_bundled.py
src/core/buddy/: companion.py  storage.py
src/core/sandbox/: manager.py
src/my_claw/: config.py  session.py
src/my_claw/buddy/: commands.py  types.py
src/my_claw/buddy/poke_game/: persistence.py
src/my_claw/sandbox/: wrapper.py
